2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-02
	* add tree branch 'refrank'
	* add tree branch 'refy' (reference rapidity)
	* add tree branch 'jty' (jet rapidity)
	* yet to be accounted for in e.g. jet_response_analyzer_x tool!
	
2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* add JPT L2L3 corrections

2010-03-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* compatible with CMSSW_3_5_4 (->TFileService)
	* transition from absolute to relative response for
	jet_l3_correction_x tool, jet_l2_correction_x toll still pending

2010-02-17  Konstantinos Kousouris  <Konstantinos.Kousouris@cern.ch>

        * tag V00-07-06
        * compatible with CMSSW_3_5_0
        * jet_l3_correction_x: response is now calculated from the ratio ptCalo/ptGen
        * jet_l2_correction_x: response is now calculated from the ratio ptCalo/ptGen
        * jet_response_fitter_x: implemented the low pt bias modification
2009-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-03
	* jma: small fix
	* bring back JPT
	* disable TrackJets for the time being

	* tag V00-07-02
	* add jet_mass_analyzer_x

2009-11-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* cfg: disable PF2PAT temporarily
	* cfg: disable JPT temporarily
	* JRA: take out metx & mety
	* JRA: add reference & jet energy (branches refe & jte)
	* JRA: identify semileptonic c- and b-decays (refpdgids:
	+-411,+-413, +-511, +-513)
	* jra: take semileptonic decays into account (slb_* and slc_*, no
	distinction between electrons and muons right now!)
	* jra: set default of 'useweight' in jet_response_analyzer_x to
	false
	* jrar: remove parameter 'variables', add parameters (bool)
	dorelrsp, doabsrsp, doetarsp, dophirsp, (vstring)
	formats. construct vstring 'variables' from the values of these
	parameters
